--- a/static/custom/custom.css
+++ b/static/custom/custom.css
@@ -14,6 +14,7 @@ body{
     top: 60%;
     transform: translate(-50%, -50%);
     background-image: url('../assets/menu-blank.png');
+    background-repeat: no-repeat;
     width: 600px;
     height: 400px;
     padding: 24px;
@@ -36,7 +37,7 @@ body{
     text-decoration: none;
 }
 
-#menu a:hover{
-    color: #e6ce33;
+#menu .arrows, #menu .menu-selected{
+    color: #e6ce33 !important;
 }
 
