--- a/static/custom/custom.css
+++ b/static/custom/custom.css
@@ -3,10 +3,26 @@ body{
 }
 
 #main-div{
-    background-image: url('../assets/bg-menu.png');
+    background-image: url('../assets/oaza_1.png');
     background-repeat: no-repeat;
     background-size: cover;
     height: 100vh;
+    -webkit-animation-name: fade;
+    -webkit-animation-iteration-count: infinite;
+    -webkit-animation-duration: 6s;
+    animation-name: fade;
+    animation-iteration-count: infinite;
+    animation-duration: 2s;
+}
+
+@-webkit-keyframes fade {
+    0% {background-image: url('../assets/oaza_1.png')}
+    50% {background-image: url('../assets/oaza_2.png')}
+}
+
+@keyframes fade {
+    0% {background-image: url('../assets/oaza_1.png')}
+    50% {background-image: url('../assets/oaza_2.png')}
 }
 
 #menu{
