--- a/static/custom/custom.css
+++ b/static/custom/custom.css
@@ -9,10 +9,11 @@ body{
     height: 100vh;
     -webkit-animation-name: fade;
     -webkit-animation-iteration-count: infinite;
-    -webkit-animation-duration: 6s;
+    -webkit-animation-duration: 1s;
     animation-name: fade;
     animation-iteration-count: infinite;
-    animation-duration: 1.25s;
+    animation-duration: 1s;
+    animation-timing-function: step-end;
 }
 
 @-webkit-keyframes fade {
