--- a/static/custom/game.css
+++ b/static/custom/game.css
@@ -14,9 +14,13 @@
     line-height: 228px;
 }
 
-.phase{
+#phases, .phase{
     display: inline-block;
-    width: 48px;
+    max-height: 56px;
+}
+
+.phase{
+    width: 64px;
     margin-left: 8px;
     margin-right: 8px;
     color: #f2e694;
