--- a/static/custom/game.css
+++ b/static/custom/game.css
@@ -11,7 +11,6 @@
     padding: 24px;
     font-weight: 900;
     font-size: 48px;
-    line-height: 228px;
 }
 
 #phases, .phase{
@@ -21,8 +20,8 @@
 
 .phase{
     width: 64px;
-    margin-left: 8px;
-    margin-right: 8px;
-    color: #f2e694;
-    border-bottom: 8px #f2e694 solid;
+    color: #e6ce33;
+    margin: 96px 8px 0;
+    border-bottom: 4px #f2e694 solid;
+    box-sizing: border-box;
 }
