--- a/static/custom/game.css
+++ b/static/custom/game.css
@@ -27,9 +27,12 @@
 }
 
 #bucket-amount{
-    text-align: center;
+    margin: 0 auto;
+    background-image: url('../assets/buklak.png');
+    height: 100px;
+    width: 160px;
     padding-top: 40px;
-    padding-left: 48px;
+    padding-left: 96px;
     font-size: 24px;
     color: white;
 }
