--- a/static/custom/global.css
+++ b/static/custom/global.css
@@ -17,6 +17,7 @@ body{
 
 .menu{
     position: fixed;
+    display: none;
     border: 8px solid #fee623;
     border-radius: 32px;
     box-sizing: border-box;
@@ -25,4 +26,8 @@ body{
     text-align: center;
     font-weight: bold;
     text-transform: uppercase;
+}
+
+.curr-menu{
+    display: block;
 }
