--- a/static/custom/game.css
+++ b/static/custom/game.css
@@ -12,7 +12,7 @@
     50% {background-image: url('../assets/pustynia_ph_2.png')}
 }
 
-#status, #pause{
+#status, #pause, #gameover{
     left: 50%;
     bottom: -10%;
     transform: translate(-50%, -50%);
@@ -60,4 +60,10 @@
 .warning-sign{
     color: lightcoral;
     font-size: 14px;
+}
+
+#gameover{
+    height: 200px;
+    width: 420px;
+    bottom: 50%;
 }
