--- a/static/custom/menu.css
+++ b/static/custom/menu.css
@@ -26,15 +26,6 @@
     height: 600px;
 }
 
-#about{
-    background: url('../assets/about.png') no-repeat center center fixed;
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    -o-background-size: cover;
-    background-size: cover;
-    z-index: 9999;
-}
-
 .menu span{
     height: 36px;
 }
@@ -80,4 +71,8 @@
     #ranking{
         width: 420px;
     }
+}
+
+#instructions{
+    font-size: 14px;
 }
